[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midas-llm"
version = "0.1.0"
description = "Extract structured metadata from infectious disease modeling abstracts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.24.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.1.0",
    "rdflib>=6.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
midas-extract = "midas_llm.extract_concepts:cli"
midas-download-ontologies = "midas_llm.scripts.download_ontologies:main"

[tool.hatch.build.targets.wheel]
packages = ["src/midas_llm"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["midas_llm"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
