[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midas-llm"
version = "0.1.0"
description = "Extract structured metadata from infectious disease modeling abstracts"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.24.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
    "safetensors>=0.4.0",
]

[project.scripts]
run_evaluation = "concept_extractor.workflows.run_evaluation:main"

[tool.hatch.build.targets.wheel]
packages = ["src/concept_extractor"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["concept_extractor"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-ra -q"
